--- a/mini-apps/package.json
+++ b/mini-apps/package.json
@@ -19,7 +19,9 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "ethers": "5.7.2",
+    "keccak256": "^1.0.6",
     "lucide-react": "^0.511.0",
+    "merkletreejs": "^0.5.2",
     "next": "15.1.8",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
